--- a/src/Globals.css
+++ b/src/Globals.css
@@ -4,27 +4,41 @@
 @theme {
     --color-base: #1A1A2E;
     --color-base-light: #F9F9F9;
-    --color-secondary: #16213E; /* dark blue */
+    --color-secondary: #4a4e69; /* dark blue */
     --color-accent: #dab2ff; /* purp */
     --color-textColor: #F9F9F9;
 }
 
+html {
+    scroll-behavior: smooth;
+}
 body {
     font-family: 'Montserrat', ui-sans-serif, system-ui;
     background-color: var(--color-base);
-    scroll-behavior: smooth;
     color:var(--color-base-light);
 }
 
 main {
     width: 100%;
-    max-width:1000px;
+    max-width:1280px;
     margin: 0 auto;
+    padding-top: 3.5em;
 }
+p {
+    line-height: 1.5;
+    font-size: 1.125rem;
+}
+
+
 
 @media (max-width: 950px) {
     main {
-        padding: 0 1rem;
+        padding: 0 .5rem;
         max-width: 100%;
+        padding-top: 3.5em;
     }
+    footer p {
+        font-size: .9rem;
+        
+}
 }
